Fix right sidebar position for 2k monitor
Hello, I have a 2k monitor and the right sidebar is just out of place. If I changed to 100% it just work.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,5 @@
 .md-grid {
-    max-width: 170rem;
+    max-width: 100%;
     margin-right: auto;
     margin-left: auto;
 }
